community/chromium: build with llvm/clang 19
the original MR (https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/82845)
that passed CI was built with llvm/clang 19, but by the time the security upgrade
was merged, llvm/clang 20 had been made default. for an attempt to make this build
with Clang 20, see https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/82919

--- a/community/chromium/APKBUILD
+++ b/community/chromium/APKBUILD
@@ -24,6 +24,7 @@ depends="
 	so:libudev.so.1
 	xdg-utils
 	"
+_llvmver=19
 makedepends="
 	alsa-lib-dev
 	bash
@@ -32,8 +33,8 @@ makedepends="
 	brotli-dev
 	bzip2-dev
 	cairo-dev
-	clang-dev
-	compiler-rt
+	clang$_llvmver-dev
+	clang$_llvmver-rtlib
 	crc32c-dev
 	cups-dev
 	curl-dev
@@ -79,8 +80,8 @@ makedepends="
 	libxscrnsaver-dev
 	libxslt-dev
 	linux-headers
-	lld
-	llvm
+	lld$_llvmver
+	llvm$_llvmver
 	mesa-dev
 	minizip-dev
 	nodejs
@@ -623,10 +624,10 @@ _configure() {
 	export CXXFLAGS="${CXXFLAGS/-fstack-clash-protection}"
 	export CFLAGS="${CFLAGS/-fstack-clash-protection}"
 
-	export AR="llvm-ar"
-	export CC="clang"
-	export CXX="clang++"
-	export NM="llvm-nm"
+	export AR="/usr/lib/llvm$_llvmver/bin/llvm-ar"
+	export CC="/usr/lib/llvm$_llvmver/bin/clang"
+	export CXX="/usr/lib/llvm$_llvmver/bin/clang++"
+	export NM="/usr/lib/llvm$_llvmver/bin/llvm-nm"
 
 	msg "Configuring build"
 
@@ -662,9 +663,6 @@ _configure() {
 		local cc_wrapper=""
 		;;
 	esac
-
-	# this follows compiler-rt, not clang or llvm package
-	_llvmver=19
 
 	# shellcheck disable=2089
 	local gn_config="
