community/fluster: upgrade to 0.3.0

--- a/community/fluster/APKBUILD
+++ b/community/fluster/APKBUILD
@@ -1,9 +1,8 @@
 # Contributor: Luca Weiss <luca@lucaweiss.eu>
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=fluster
-pkgver=0.1.0_git20231211
-_commit="d9106f57aff656c258c1a076952817c61909c65b"
-pkgrel=2
+pkgver=0.3.0
+pkgrel=0
 pkgdesc="Testing framework for decoders conformance"
 url="https://github.com/fluendo/fluster"
 arch="noarch"
@@ -16,8 +15,7 @@ license="LGPL-3.0-or-later"
 # * libvpx-utils
 makedepends="py3-gpep517 py3-setuptools py3-wheel"
 subpackages="$pkgname-pyc"
-source="https://github.com/fluendo/fluster/archive/$_commit/fluster-$_commit.tar.gz"
-builddir="$srcdir/fluster-$_commit"
+source="https://github.com/fluendo/fluster/archive/v$pkgver/fluster-v$pkgver.tar.gz"
 options="!check" # no test suite
 
 build() {
@@ -34,5 +32,5 @@ package() {
 }
 
 sha512sums="
-3943e85e26f58dc34344907a5dd5c67e1279582927bbcd5464af060efa18a24da45a4a06fc5fbad1ae6d7dce4268ad1db8454c552590eebf33d296dafd63e798  fluster-d9106f57aff656c258c1a076952817c61909c65b.tar.gz
+d5fd64f75aefe12d73015254e8cb9e3f3b2b4bdc088c7544d86fa004ac909a8c72b8ed2ff9c25c0eac69ec229f12fe0b8fa1a9685155a56ba64475f9bd757256  fluster-v0.3.0.tar.gz
 "
