--- a/main/wasi-compiler-rt/APKBUILD
+++ b/main/wasi-compiler-rt/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=wasi-compiler-rt
 # match llvm ver
-pkgver=19.1.7
+pkgver=20.1.2
 _llvmver="${pkgver%%.*}"
-_wasi_sdk_ver=wasi-sdk-24
+_wasi_sdk_ver=wasi-sdk-25
 pkgrel=0
 pkgdesc="WASI LLVM compiler runtime"
 url="https://compiler-rt.llvm.org/"
@@ -37,7 +37,6 @@ prepare() {
 }
 
 build() {
-	export CFLAGS="$CFLAGS -fno-exceptions --sysroot=/usr/share/wasi-sysroot"
 	cmake -B build -G Ninja -S compiler-rt -Wno-dev \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		-DCMAKE_MODULE_PATH="$builddir"/cmake \
@@ -50,7 +49,8 @@ build() {
 		-DCOMPILER_RT_DEFAULT_TARGET_ONLY=ON \
 		-DCOMPILER_RT_OS_DIR=wasi \
 		-DWASI_SDK_PREFIX=/usr \
-		-DCMAKE_INSTALL_PREFIX=/usr/lib/llvm$_llvmver/lib/clang/$_llvmver/
+		-DCMAKE_INSTALL_PREFIX=/usr/lib/llvm$_llvmver/lib/clang/$_llvmver/ \
+		-DCMAKE_SYSROOT=/usr/share/wasi-sysroot
 	cmake --build build
 }
 
@@ -61,6 +61,6 @@ package() {
 }
 
 sha512sums="
-c7d63286d662707a9cd54758c9e3aaf52794a91900c484c4a6efa62d90bc719d5e7a345e4192feeb0c9fd11c82570d64677c781e5be1d645556b6aa018e47ec8  llvm-project-19.1.7.src.tar.xz
-e8ee706bad58d63a51e1e856745343b10208620f75a501af7ba57db671f564ad1a67d255af281e126246c3c061aa339335cb6f7611e33e2ffe6474b2322ac39c  wasi-sdk-wasi-sdk-24.tar.gz
+c95e088e471d49c6692c8af1a7e40924467e4c269dada019c44455687c9f0e6a213b9b3ac8afa4e3d20cb3e757afc3400152e7cd06981aeebd61591cac15580d  llvm-project-20.1.2.src.tar.xz
+5124c31a16243683e3282180cdef00491e731a61a85dba36debff3b12093f196a3e34b8666351a6d498e264766cd0c1c1e72b70fc54f6a673753f69e9b95a215  wasi-sdk-wasi-sdk-25.tar.gz
 "
