main/llvm-runtimes: add provides for clang20-rtlib
to compiler-rt subpackage

--- a/main/llvm-runtimes/APKBUILD
+++ b/main/llvm-runtimes/APKBUILD
@@ -6,7 +6,7 @@ pkgname=llvm-runtimes
 # Note: Update together with llvm.
 pkgver=20.1.2
 _llvmver=${pkgver%%.*}
-pkgrel=0
+pkgrel=1
 pkgdesc="LLVM Runtimes"
 url="https://llvm.org/"
 arch="all"
@@ -124,6 +124,8 @@ libunwind_dev() {
 
 rt() {
 	pkgdesc="LLVM compiler-rt runtime libraries"
+	# prefix with 0.0 for easy migration to clang-rtlib when this ver no longer tracks default Clang
+	provides="clang$_llvmver-rtlib=0.0.$pkgver-r$pkgrel"
 
 	amove usr/lib/llvm$_llvmver/lib/clang/$_llvmver
 }
