community/libtracefs: upgrade to 1.8.2
https://git.kernel.org/pub/scm/libs/libtrace/libtracefs.git/tag/?h=libtracefs-1.8.2

--- a/community/libtracefs/APKBUILD
+++ b/community/libtracefs/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer:
 pkgname=libtracefs
-pkgver=1.8.1
-pkgrel=1
+pkgver=1.8.2
+pkgrel=0
 pkgdesc="Linux kernel trace file system library"
 url="https://git.kernel.org/pub/scm/libs/libtrace/libtracefs.git/about/"
 arch="all"
@@ -17,7 +17,12 @@ makedepends="
 	xmlto
 	"
 checkdepends="cunit-dev"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-utils"
+subpackages="
+	$pkgname-bash-completion
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-utils
+	"
 source="https://git.kernel.org/pub/scm/libs/libtrace/libtracefs.git/snapshot/libtracefs-$pkgver.tar.gz"
 options="!check" # fail to start, but exit 0
 
@@ -45,5 +50,5 @@ utils() {
 }
 
 sha512sums="
-1d8775cf511982a99e2dd17afcf48da272ff8ec189710a27420befe8765155ed21fd62db8fb2b75a0965e0a52ef810459c826f9b4989093c6a64d0cb7894cfca  libtracefs-1.8.1.tar.gz
+a4437f40b97c700a643e4a232876b44415f91043b474787784e513d18eafa071a07c9b6431185914a97b258ea6ef89bab247e2feead0366144502e7c95b8c9fd  libtracefs-1.8.2.tar.gz
 "
