community/tinysparql: upgrade to 3.9.2
https://gitlab.gnome.org/GNOME/tinysparql/-/blob/3.9.2/NEWS

--- a/community/tinysparql/APKBUILD
+++ b/community/tinysparql/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: team/gnome <fossdd@pwned.life>
 pkgname=tinysparql
-pkgver=3.9.1
-pkgrel=2
+pkgver=3.9.2
+pkgrel=0
 pkgdesc="Personal search tool and storage system"
 url="https://tracker.gnome.org/"
 arch="all"
@@ -41,9 +41,7 @@ subpackages="
 	lib$pkgname:libs
 	$pkgname-bash-completion
 	"
-source="https://download.gnome.org/sources/tinysparql/${pkgver%.*}/tinysparql-$pkgver.tar.xz
-	fix-deserialize-test.patch
-	"
+source="https://download.gnome.org/sources/tinysparql/${pkgver%.*}/tinysparql-$pkgver.tar.xz"
 
 # for backwards compatibility
 replaces="tracker"
@@ -80,6 +78,5 @@ libs() {
 }
 
 sha512sums="
-04aa0715696b4b21af8f52124be23634b0a2216b49a9bf2aa08d5a0baf1f323e02c05397ac167bfce010da99af4a0d7b13058d77b4ba114ad3de90edb9c26bf3  tinysparql-3.9.1.tar.xz
-df56b7be028aa3e9b5649b8c8061d711ed49226ffb8def46861252ecf264bbcc6cb7f77854a88bd3ce5983f79b3405a5fa42689a07c5f0e54bee30f401dd53e7  fix-deserialize-test.patch
+8d70571ada4097c56fb45844489405cc4b468f33ef5bb4db7020ad77882701097499111628ffbdac7e5dafb1f85b5801a3c2166ccf070a745a2f63b52ba3e314  tinysparql-3.9.2.tar.xz
 "
