community/moarvm: upgrade to 2025.04

--- a/community/moarvm/APKBUILD
+++ b/community/moarvm/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Curt Tilmes <Curt.Tilmes@nasa.gov>
 # Maintainer: Curt Tilmes <Curt.Tilmes@nasa.gov>
 pkgname=moarvm
-pkgver=2025.03
+pkgver=2025.04
 pkgrel=0
 pkgdesc="VM with adaptive optimization and JIT compilation, built for Rakudo"
 url="https://moarvm.org/"
@@ -17,9 +17,7 @@ depends_dev="
 	"
 makedepends="$depends_dev"
 subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/MoarVM/MoarVM/releases/download/$pkgver/MoarVM-$pkgver.tar.gz
-	native-int-write.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/MoarVM/MoarVM/releases/download/$pkgver/MoarVM-$pkgver.tar.gz"
 builddir="$srcdir/MoarVM-$pkgver"
 options="!check" # No tests
 
@@ -52,6 +50,5 @@ dev() {
 }
 
 sha512sums="
-6db60d57503178bc137308ab092284d1949120b6c82ee10a00c3fbfdac927bacc210caf19de85972248adab67ce96e45fdb1443013b9a76201491777813fbce8  moarvm-2025.03.tar.gz
-5a9a47ceeefa1a0848811977193f483c346126231debfc03fd0b542f6186414bafc576d075ae05fdceddf5f121f01b8fce5c8edb72e41ceb5e88b6cb1d5af563  native-int-write.patch
+3885deeb337a823211dbe3edec2834476c49c280833fe746fd6622bb771a58cfe860a0072b19fdbe8460a17807c8ab26bc1494b193268cba8d1f6825c4c57dfc  moarvm-2025.04.tar.gz
 "
