community/rakudo-star: upgrade to 2025.03

--- a/community/rakudo-star/APKBUILD
+++ b/community/rakudo-star/APKBUILD
@@ -1,15 +1,24 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=rakudo-star
-pkgver=2024.09
+pkgver=2025.03
 pkgrel=0
 pkgdesc="Rakudo modules distribution"
 url="https://rakudo.org/star/"
 # riscv64: takes longer than the 45m timeout
 arch="all !riscv64"
 license="Artistic-2.0"
-depends="libssl3 rakudo>$pkgver readline"
-makedepends="bash perl-utils libffi-dev libuv-dev libxml2-dev zstd-dev"
+depends="
+	libssl3
+	rakudo>$pkgver
+	readline
+	"
+makedepends="
+	bash
+	libxml2-dev
+	moarvm-dev>$pkgver
+	perl-utils
+	"
 # net: download missing dependencies, !check: no unified test suite
 options="net !check"
 source="https://github.com/rakudo/star/releases/download/$pkgver/rakudo-star-$pkgver.tar.gz
@@ -46,10 +55,10 @@ package() {
 }
 
 sha512sums="
-8b631cd0b4d50579987b4f1a9e3875dd988bc034d27311665c5da02a20b19e7b2fa56308260a3300563784be33201037aad01a169f1721852317641d7c6be833  rakudo-star-2024.09.tar.gz
-c915cfab907b266d674e796b364ccc61d677773295c5962d5775faf7fab32f02d743c9b4f72d49890f94174481a5ec47c03409dcece0d71a4a0dbf4cf249de14  rakudo-not-perl6.patch
+a8932bdd265a777a6b2eb4338eb96eaf25e8677c585944d66756f8b6c17e29042c3894db5efd7f8983150708766aade7053ee8fbbb2adf6477c459a049e65388  rakudo-star-2025.03.tar.gz
+7c61dbf2dc221a9f6c493662d91098e1f55190fd6942fc29da1023654b3e936aad485e502fc1c62016fa4fe1f592f040e6c6076411a032d97c4c044a047d8405  rakudo-not-perl6.patch
 cee4eb863c9c6f66ee02e9d16171ad766daa881135c747e4b9b43b1e40442ed2384a6586f090dfe6014b48871873bb109ec76abf45447b72d9a2b5ab63d2e71d  openssl-nativelib.patch
-29be28af0ce4ddd3d2f4f98a3acbc2684dd29aced756fa08e1ee0bade92af6fb5d786d180740c48abe41138cefcc9cf8a0a86d88248e98804070c875a15e07cc  use-newer-versions.patch
-6b3b9afd40de4337446839b35a9e2e5a032a2fd817072ffafa7d71ce0331761b7c7005d8e286547be6f27ab83a7cdc7e5031aae978ed7c286fbed3f5d9bd135a  reorder-modules.patch
-03b71414fe3cb650bcaf5f230ec32b1e879c670dcdd46cb07947f41048c02134559501e16f056ece0a41fb5b7e12e7551407adb95aa46eb9846b80944987bc3e  lock-depends-version.patch
+8dc10d54de050c54f17de32694e8bb4e7ca0895bcd092e9f566f3aeff10893c21dbaa267a2b362e281ad552d8e815519260f7a37119e7da3c7189e6ba3d4a802  use-newer-versions.patch
+d5caef60d76733499341c2a2d2b672a3db97dc0d7359f14363c4ee445e137c9e7e5f112cb174c2f8cc34981276433c529e94eadd742952918f506ac95d503b0b  reorder-modules.patch
+d1ea7e5d60eea16d36d758f52e532be8b44c35fe0a05e05b1fcba431bd55016efb2391a0fc30dc061e15cb6df4f0d77f6a21b7afa5ba6e0c4a58b8f9b4afe345  lock-depends-version.patch
 "
