--- a/testing/oo7/APKBUILD
+++ b/testing/oo7/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="Matthias Ahouansou <matthias@ahouansou.cz>"
 pkgname=oo7
 pkgver=0.4.3
-pkgrel=0
+pkgrel=1
 pkgdesc="CLI application to interact with the system keyring"
 url="https://bilelmoussaoui.github.io/oo7/oo7/"
 arch="all"
@@ -58,7 +58,7 @@ portal() {
 
 portal_openrc() {
 	pkgdesc="An implementation of org.freedesktop.impl.portal.Secret (OpenRC init scripts)"
-	depends="oprnrc"
+	depends="openrc"
 	install_if="openrc $pkgname-portal=$pkgver-r$pkgrel"
 	
 	install -Dm 644 "$srcdir"/oo7-portal.initd "$subpkgdir"/etc/init.d/user/oo7-portal
@@ -73,7 +73,7 @@ server() {
 
 server_openrc() {
 	pkgdesc="D-Bus Secret Service provider (OpenRC init scripts)"
-	depends="oprnrc"
+	depends="openrc"
 	install_if="openrc $pkgname-server=$pkgver-r$pkgrel"
 	
 	install -Dm 644 "$srcdir"/oo7-server.initd "$subpkgdir"/etc/init.d/user/oo7-server
