community/plan9port: also set PLAN9_TARGET during build()
This is necessary as PLAN9_TARGET is passed as a CPP macro to the
build process. Crucially, getroot(3) relies on this macro when
the PLAN9 environment variable isn't set. For example, when using
rc(1) as a login shell.

--- a/community/plan9port/APKBUILD
+++ b/community/plan9port/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=plan9port
 pkgver=0_git20241022
-pkgrel=0
+pkgrel=1
 _commit=61e362add9e1485bec1ab8261d729016850ec270
 pkgdesc="Port of many Plan 9 libraries and programs to Unix"
 url="https://9fans.github.io/plan9port/"
@@ -26,12 +26,12 @@ export CC9="${CC:-gcc}"
 export CC9FLAGS="$CFLAGS $LDFLAGS"
 
 build() {
-	./INSTALL -b
+	# Can only pass a single flag to ./INSTALL.
+	# For this reason, we set PLAN9_TARGET (-r flag) directly.
+	PLAN9_TARGET=/usr/lib/plan9 ./INSTALL -b
 }
 
 package() {
-	# Can only pass a single flag to ./INSTALL.
-	# For this reason, we set PLAN9_TARGET (-r flag) directly.
 	PLAN9_TARGET=/usr/lib/plan9 ./INSTALL -c
 
 	mkdir -p "$pkgdir"/usr/lib/plan9
