--- a/community/pipeline/APKBUILD
+++ b/community/pipeline/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Matthias Ahouansou <matthias@ahouansou.cz>
 # Maintainer: Matthias Ahouansou <matthias@ahouansou.cz>
 pkgname=pipeline
-pkgver=2.1.1
-pkgrel=1
+pkgver=2.2.1
+pkgrel=0
 pkgdesc="Watch YouTube and PeerTube videos in one place"
 url="https://gitlab.com/schmiddi-on-mobile/pipeline"
 arch="all"
@@ -22,11 +22,10 @@ makedepends="
 "
 subpackages="$pkgname-doc $pkgname-lang"
 source="
-	$pkgname-$pkgver.tar.gz::https://gitlab.com/schmiddi-on-mobile/pipeline/-/archive/v$pkgver/pipeline-v$pkgver.tar.gz
+	$pkgname-$pkgver.tar.gz::https://gitlab.com/schmiddi-on-mobile/pipeline/-/archive/$pkgver/pipeline-$pkgver.tar.gz
 	cargo-auditable.patch
 "
 options="net"
-builddir="$srcdir/$pkgname-v$pkgver"
 
 prepare() {
 	default_prepare
@@ -51,6 +50,6 @@ package() {
 }
 
 sha512sums="
-e5830fa678d5030f9f1e9276f9c0f30573bdbaa38e5e09c8d0ffa2d143b35dd5e7d7c7c0c441c8c75e57a5055131d489f4dc85c5f73c6d0d14a916c23def9183  pipeline-2.1.1.tar.gz
+fedabc93ec5c838d66f9d340e11559139d258bd3d898c7aebecc4da138c4347ede5442590774fdfd1f366c156486642d729d2acee2a47092fdce0f7757940a52  pipeline-2.2.1.tar.gz
 e6faae8a164e818b87d5366a9d495a953e40fd37e801253daff253cc9d9c42a8893129aecb2e4f3fba9f43f3a0646ffebca5e48ce67defeb9fdf3ea5a0844e7f  cargo-auditable.patch
 "
