community/thttpd: improve default config, disable vhost by default
...and do some minor code-style improvements in APKBUILD.

The vhost option enabled by default is very confusing for newcomers.

--- a/community/thttpd/APKBUILD
+++ b/community/thttpd/APKBUILD
@@ -65,21 +65,21 @@ package() {
 
 	install -d "$pkgdir"/var/log/thttpd
 	install -d "$pkgdir"/usr/share/licenses/"$pkgname"
-	head -n 26 thttpd.c > \
-		"$pkgdir"/usr/share/licenses/"$pkgname"/LICENSE
+	head -n 26 thttpd.c > "$pkgdir"/usr/share/licenses/"$pkgname"/LICENSE
+
 	mkdir -p "$pkgdir/usr/share/doc/$pkgname"
-	cat > $pkgdir/usr/share/doc/$pkgname/README.alpine <<EOF
+	cat > $pkgdir/usr/share/doc/$pkgname/README.alpine <<-EOF
 	To use makeweb, please set suid to makeweb binary with:
 	-------------------------------------------------------
 	chmod 2755 /usr/sbin/makeweb
-EOF
+	EOF
 }
 
 sha512sums="
 e02ed5b889eb3c875d56503093777c542316165a8df2d83e539337fb0759b6d9728fd484123dd903af57b06c97fe339055b816cca64778b7369b94020bd61ab6  thttpd-2.29.tar.gz
 53e6bd6f0c9dd40c01bf1611be6aa2afb14984dd289246d09792687efac9d70360eec04184c2ca44e420bdce1601cab72cdbc595522cf57ce4facebdd51608f5  thttpd.initd
 1b042abda58c737159f8701f22cdc32ca8e62a968b426df8e3ede809066256d7870f7fb8e8292e79aee40ccb9d7f22d7f449a8f038dffd267d40a2f174e90c33  thttpd.confd
-4b7aab5e5abd31d752c2aa659003eeeec5826eb3640df3a705806e520b3dfe6a19d1812d349df51e763e73275cc122c04e1f5038dd9dd10f168a48c8d526016e  thttpd.conf
+0e5fd090a83af1e7c452f257c3cd5d0870f8f5d33bbdddc9f98595c591b585eda29ebf1665cedeeaabdd987f5d4be53a3c10b12d3bf0287287dd3c44dafc7445  thttpd.conf
 5b2800825583e93cf4be76e71d2840b9894c1779a810d562a0b6145cae0c7504dadfdc1e844f1611a48cca3b4518d41b47e41a68f33043d58ffde85f1e56e3f3  thttpd.logrotated
 349721da9e670ca666891f98ca338ae0041c09b353fc42bdd87015803f0b668478be8e48f36d5b56b5e172d3a7b262bf4a71c9619607a068e41c2bc292bde2be  thttpd-webgroup.patch
 02c079ca104f2358cd20756082657dca96f7a88cbeb611de81504f1581c5e085a7a2765ec55b6e0ae1948803afced85e8a45fc6deb2fef1ec5ba1ba96ce68b4b  forwarded-for.patch
