--- a/community/thttpd/thttpd.conf
+++ b/community/thttpd/thttpd.conf
@@ -1,7 +1,62 @@
+# Configuration for thttpd(1)
+# See https://acme.com/software/thttpd/thttpd_man.html for more.
+
+# Specifies an alternate port number to listen on.
+#port=80
+
+# Specifies a directory to chdir() to at startup. This is merely a
+# convenience - you could just as easily do a cd in the shell script that
+# invokes the program.
 dir=/var/www/http
-vhost
+
+# Do a chroot() at initialization time, restricting file access to the
+# program's current directory.
 chroot
+
+# Specifies a directory to chdir() to after chrooting. If you're not
+# chrooting, you might as well do a single chdir() with the dir option. If you
+# are chrooting, this lets you put the web files in a subdirectory of the
+# chroot tree, instead of in the top level mixed in with the chroot files.
+#data_dir=
+
+# Don't do explicit symbolic link checking. Normally, thttpd explicitly
+# expands any symbolic links in filenames, to check that the resulting path
+# stays within the original document tree.
+# nosymlinkcheck
+
+# Do el-cheapo virtual hosting.
+# vhost
+
+# Use a global passwd file. This means that every file in the entire
+# document tree is protected by the single .htpasswd file at the top of the
+# tree.
+# globalpasswd
+
+# Specifies what user to switch to after initialization when started as
+# root.
 user=thttpd
+
+# Specifies a wildcard pattern for CGI programs, for instance "**.cgi" or
+# "/cgi-bin/*".
 cgipat=**.cgi
+
+# Specifies a file of throttle settings.
+#throttles=
+
+# Specifies a hostname to bind to, for multihoming. The default is to bind
+# to all hostnames supported on the local machine.
+# host=
+
+# Specifies a file for access logging. If no logfile option is specified,
+# thttpd logs via syslog() only. If "logfile=/dev/null" is specified, thttpd
+# doesn't log at all.
 logfile=/var/log/thttpd/thttpd.log
+
+# Specifies the character set to use with text MIME types.
 charset=utf-8
+
+# Specifies the number of seconds to be used in a "Cache-Control: max-age"
+# header to be returned with all responses. An equivalent "Expires" header
+# is also generated. The default is no Cache-Control or Expires headers,
+# which is just fine for most sites.
+#max_age=
