community/freerdp: upgrade to 3.15.0
https://github.com/FreeRDP/FreeRDP/releases/tag/3.15.0

--- a/community/freerdp/APKBUILD
+++ b/community/freerdp/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=freerdp
 _pkgname=FreeRDP
-pkgver=3.14.1
+pkgver=3.15.0
 pkgrel=0
 pkgdesc="FreeRDP client"
 url="https://www.freerdp.com/"
@@ -35,9 +35,7 @@ makedepends="
 	webkit2gtk-4.1-dev
 	"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-libs"
-source="$pkgname-$pkgver.tar.gz::https://github.com/FreeRDP/FreeRDP/archive/$pkgver.tar.gz
-	fix-test.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/FreeRDP/FreeRDP/archive/$pkgver.tar.gz"
 
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -138,6 +136,5 @@ libs() {
 }
 
 sha512sums="
-f9a84d60198f69ecea477e1a63c635674cac4952c9897586f85f4e2a6e9445de09cf9736cd51e274a29a24d2ec8eb1a0d00b9cc0caa55839a205790e261f29af  freerdp-3.14.1.tar.gz
-54e6018791205b0fc89d95f2d56ccfda067063f668d459f7f5ecd4d53c977afa597e7661caa597302fe5b222404fbf51db34d875807cda247c00f7c8751f9924  fix-test.patch
+920f4da6d9fd44066cf4b96ec2eced389cb4a864bf4dba33dd6ec68c1eaf8b6ddb2d710a087ea5d6b722b9d5b9511b3a6c98a493c6ffb1c06d13a963e0db9e5d  freerdp-3.15.0.tar.gz
 "
