--- a/main/nasm/APKBUILD
+++ b/main/nasm/APKBUILD
@@ -8,7 +8,9 @@ arch="all"
 license="BSD-2-Clause"
 checkdepends="perl"
 subpackages="$pkgname-doc"
-source="https://www.nasm.us/pub/nasm/releasebuilds/$pkgver/nasm-$pkgver.tar.xz"
+# upstream source currently unavailable, use cached archive
+source="https://distfiles.alpinelinux.org/distfiles/v3.21/nasm-2.16.03.tar.xz"
+#source="https://www.nasm.us/pub/nasm/releasebuilds/$pkgver/nasm-$pkgver.tar.xz"
 
 build() {
 	CFLAGS="$CFLAGS -O2 -flto=auto" \
@@ -20,7 +22,7 @@ build() {
 }
 
 check() {
-	make test
+	make -j1 -C test golden test diff
 }
 
 package() {
