--- a/main/dhcpcd/APKBUILD
+++ b/main/dhcpcd/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=dhcpcd
 pkgver=10.2.2
-pkgrel=0
+pkgrel=1
 pkgdesc="RFC2131 compliant DHCP client"
 url="https://roy.marples.name/projects/dhcpcd"
 arch="all"
@@ -13,6 +13,7 @@ install="$pkgname.post-upgrade $pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://github.com/NetworkConfiguration/dhcpcd/releases/download/v$pkgver/dhcpcd-$pkgver.tar.xz
 	busybox-logger.patch
+	dont-spam-route-changes-for-lifetime.patch
 	fix-chrony-conf-location.patch
 	dhcpcd.initd
 	"
@@ -49,6 +50,7 @@ package() {
 sha512sums="
 299c0e629d7d42bacaf2c6123374033c23db183810aabad2167b0449e1945add940c0889c8390ed304b27316564a8aa45eb5808e5ec0c1abea2287dc833a2684  dhcpcd-10.2.2.tar.xz
 b6bdaac9fc0d5d2d7e8c5e30d1a45db1cff2284d01f92f8821b2f03aaff4e0dbd8cbfbced96d8d9d934dc11f22b792a8345d634d8e4e3b84f43016b7e866e302  busybox-logger.patch
+5fb4a4a121c0acc29ec0ac629dd3a21edd52efaa15b8e8835453e8c79d44808419c018ae9fd72b4cbef6e176ca3271b4855d28e78a13e930616cbbf3beca9519  dont-spam-route-changes-for-lifetime.patch
 1c19eed0f7a008ee96ea392beb327169ff8c83fc27fed20f65f05c9125f60629ebe3474c5e6a7cf4aeeea448fde4264c9b84916efacd67d47ab908c47b1fc3a5  fix-chrony-conf-location.patch
 7fb44b82a6fa25ee6249fc4835853a4c1fc7d327653efabd9fde303b1f306b3aa6956b2621b55a24fc007ec7ad878ce50e7418ebff0b17fece76e2fdd9e5190d  dhcpcd.initd
 "
