community/feedbackd: update source url

--- a/community/feedbackd/APKBUILD
+++ b/community/feedbackd/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: team/phosh <newbyte@postmarketos.org>
 pkgname=feedbackd
 pkgver=0.8.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Daemon to provide haptic, LED, and audio feedback triggered by application events"
-url="https://source.puri.sm/Librem5/feedbackd"
+url="https://gitlab.freedesktop.org/agx/feedbackd"
 arch="all"
 license="GPL-3.0-or-later"
 depends="dbus feedbackd-device-themes"
