testing/py3-lsp-black: drop maintainership
I'm on longer using the package, nor black in general. Consider using
ruff instead.

--- a/testing/py3-lsp-black/APKBUILD
+++ b/testing/py3-lsp-black/APKBUILD
@@ -1,4 +1,5 @@
-maintainer="Hugo Osvaldo Barrera <hugo@whynothugo.nl>"
+# Contributor: Hugo Osvaldo Barrera <hugo@whynothugo.nl>
+maintainer=""
 pkgname=py3-lsp-black
 _pypi_name=python-lsp-black
 pkgver=2.0.0
