community/py3-django: security upgrade to 4.2.20
https://docs.djangoproject.com/en/4.2/releases/4.2.20/

--- a/community/py3-django/APKBUILD
+++ b/community/py3-django/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-django
 _pkgname=Django
-pkgver=4.2.16
+pkgver=4.2.20
 pkgrel=0
 pkgdesc="High-level Python3 Web framework"
 url="https://djangoproject.com/"
@@ -28,6 +28,11 @@ replaces="py-django" # Backwards compatibility
 provides="py-django=$pkgver-r$pkgrel" # Backwards compatibility
 
 # secfixes:
+#   4.2.20-r0:
+#     - CVE-2024-53907
+#     - CVE-2024-53908
+#     - CVE-2024-56374
+#     - CVE-2025-26699
 #   4.2.16-r0:
 #     - CVE-2024-38875
 #     - CVE-2024-39329
@@ -134,5 +139,5 @@ package() {
 }
 
 sha512sums="
-a4abe599af711f745f24a559943f67a168cd40f6c7345f2188817e748f9a463e434c463426ca99b80fdaa5580423248c35ff4fcfd35f3364abdf5279094e3f5c  Django-4.2.16.tar.gz
+6f960772cb95d6cb92ffc29ccec8d53d4f65c371359d350a63653c259288de4047302748008be04b9f4945627e9ef6d52dffa32455acbe26441f49872d73eeec  Django-4.2.20.tar.gz
 "
