main/xfsprogs: upgrade to 6.14.0
https://web.git.kernel.org/pub/scm/fs/xfs/xfsprogs-dev.git/tree/doc/CHANGES?h=v6.14.0

--- a/main/xfsprogs/APKBUILD
+++ b/main/xfsprogs/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xfsprogs
-pkgver=6.13.0
+pkgver=6.14.0
 pkgrel=0
 pkgdesc="XFS filesystem utilities"
 url="https://xfs.org/index.php/Main_Page"
@@ -19,9 +19,7 @@ makedepends="
 	"
 options="!check"  # no test suite
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs $pkgname-extra"
-source="https://mirrors.edge.kernel.org/pub/linux/utils/fs/xfs/xfsprogs/xfsprogs-$pkgver.tar.xz
-	filesize-return-type.patch
-	"
+source="https://mirrors.edge.kernel.org/pub/linux/utils/fs/xfs/xfsprogs/xfsprogs-$pkgver.tar.xz"
 
 build() {
 	export DEBUG=-DNDEBUG
@@ -62,6 +60,5 @@ extra() {
 }
 
 sha512sums="
-9fd73c8585cd295b79b227cd5855407da4b3ea2d40a1ca82e0a93887644b497cced182960bcd8f3c45805dda4a244d1555fd49da5d7e82fe4525d345c766a63a  xfsprogs-6.13.0.tar.xz
-ee1017cfccc5e3f9c8701e85c0b42e4c67ceae45acda7377bebe2264126ec2bf70fcc7befa3823b11881532417bedc5c2f8695d9845db0be01432037c5b774f3  filesize-return-type.patch
+249a64fb5a92ceb9e58b75a270a90773cfe2c90e863d3f9853c14b3eb0f414bf55b8b67c220a1d7386894ef9295622e224977bd3c6600c9dcba826cb4a634f49  xfsprogs-6.14.0.tar.xz
 "
