community/ucode: upgrade to 0.0.20231102

--- a/community/ucode/APKBUILD
+++ b/community/ucode/APKBUILD
@@ -1,13 +1,12 @@
 # Contributor: Paul Spooren <mail@aparcar.org>
 # Maintainer: Paul Spooren <mail@aparcar.org>
 pkgname=ucode
-pkgver=0.0.20220812
+pkgver=0.0.20231102
 pkgrel=0
 pkgdesc="Jinja-like micro templating"
 url="https://github.com/jow-/ucode"
 arch="all"
 license="ISC"
-source="https://github.com/jow-/ucode/archive/refs/tags/v$pkgver/ucode-v$pkgver.tar.gz"
 makedepends="
 	bash
 	cmake
@@ -17,6 +16,9 @@ makedepends="
 	samurai
 	"
 subpackages="$pkgname-dev"
+source="https://github.com/jow-/ucode/archive/refs/tags/v$pkgver/ucode-v$pkgver.tar.gz
+	tests-regex-musl-compat.patch
+	"
 
 build() {
 	cmake -B build -G Ninja \
@@ -42,5 +44,6 @@ package() {
 }
 
 sha512sums="
-6434649a471050d45d7a42341b6f932762ebdf4bf37ab881bbb0ac2b3380f76e74f42e79e72568de9cde03008a0770edbffa2fdeb1dbb1dbfeabc6de82d60b8d  ucode-v0.0.20220812.tar.gz
+3aac08585018533103ad6080f3b7913f629a81b6af056ab07372b60bdd113543a9c5418148151990e4929fd95d811b63690c1ad04bdba2ecbaab01b53530c3eb  ucode-v0.0.20231102.tar.gz
+46246ebb6bb065d0ac2916569e17df5b6e50d0f24a983247d0b0b01a2842ad6b058af95c89578355724f2a46a1346f41478275c9e7a22b10a352b782ea2b557b  tests-regex-musl-compat.patch
 "
