community/ucode: build with uloop support

--- a/community/ucode/APKBUILD
+++ b/community/ucode/APKBUILD
@@ -13,6 +13,7 @@ makedepends="
 	coreutils
 	diffutils
 	json-c-dev
+	libubox-dev
 	samurai
 	"
 subpackages="$pkgname-dev"
@@ -29,7 +30,7 @@ build() {
  		-D RTNL_SUPPORT=OFF \
  		-D UBUS_SUPPORT=OFF \
  		-D UCI_SUPPORT=OFF \
- 		-D ULOOP_SUPPORT=OFF
+ 		-D ULOOP_SUPPORT=ON
 	cmake --build build
 }
 
