community/dino: add libomemo-c-dev to makedepends
libomemo-c-dev is needed at compile time for omemo. Otherwise, dino keeps sending

I sent you an OMEMO encrypted message but your client doesn’t seem to support that. Find more information on https://conversations.im/omemo

or

[This message is OMEMO encrypted]

for omemo messages.

--- a/community/dino/APKBUILD
+++ b/community/dino/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname=dino
 pkgver=0.5.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Modern Jabber/XMPP client"
 url="https://dino.im"
 arch="all !s390x !ppc64le"
@@ -22,8 +22,8 @@ makedepends="
 	libgcrypt-dev
 	libgee-dev
 	libnice-dev
+	libomemo-c-dev
 	libqrencode-dev
-	libsignal-protocol-c-dev
 	libsoup3-dev
 	libsrtp-dev
 	ninja
