--- a/main/cargo-auditable/APKBUILD
+++ b/main/cargo-auditable/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: team/rust <alpine@ptrcnull.me>
 pkgname=cargo-auditable
 pkgver=0.6.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Cargo wrapper for embedding auditing data"
 url="https://github.com/rust-secure-code/cargo-auditable"
 arch="all"
@@ -9,12 +9,11 @@ license="MIT OR Apache-2.0"
 depends="cmd:cargo"
 # lld: for build order resolution during bootstrap, we only want rust-wasm
 # (not rust) to depend on lld to prevent lld-llvm version mismatch issues.
-case "$CARCH" in
-s390x) ;; # limited by rust-wasm
-*) checkdepends="lld rust-wasm" ;;
-esac
+checkdepends="lld rust-wasm"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/rust-secure-code/cargo-auditable/archive/refs/tags/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/rust-secure-code/cargo-auditable/archive/refs/tags/v$pkgver.tar.gz
+	fix-wasm-test.patch
+	"
 options="net"
 
 prepare() {
@@ -36,10 +35,7 @@ check() {
 	# that are not valid for wasm32 code built in the tests
 	unset RUSTFLAGS
 
-	case "$CARCH" in
-	s390x) cargo test --frozen -- --skip test_wasm ;;
-	*) cargo test --frozen ;;
-	esac
+	cargo test --frozen
 }
 
 package() {
@@ -49,4 +45,5 @@ package() {
 
 sha512sums="
 e235735767292bc347aef1095b3458e84e57e5ea8019c17842190a6a90ff4a72feb05e1ce9afe29e8d8199aaf703368e939b088b9a052c00c8e05b1b3ff5c4f6  cargo-auditable-0.6.6.tar.gz
+2f89fdd8876b0062d4dd7c2eaf65037da9651dee7fb127771cca3a222dee98e038a2956e48d3eb0756a647854926d1555f46df07e907fb41b7a106d2dd6c23e3  fix-wasm-test.patch
 "
