community/crane: upgrade to 0.20.3

--- a/community/crane/APKBUILD
+++ b/community/crane/APKBUILD
@@ -1,13 +1,14 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=crane
-pkgver=0.20.2
-pkgrel=4
+pkgver=0.20.3
+pkgrel=0
 pkgdesc="tool for interacting with remote images and registries"
 url="https://github.com/google/go-containerregistry/tree/main/cmd/crane"
 arch="all"
 license="Apache-2.0"
 makedepends="go"
+options="net" # go modules
 source="$pkgname-$pkgver.tar.gz::https://github.com/google/go-containerregistry/archive/refs/tags/v$pkgver.tar.gz"
 builddir="$srcdir/go-containerregistry-$pkgver/"
 
@@ -30,5 +31,5 @@ package() {
 }
 
 sha512sums="
-8ffe1698f442f501ef786e72717a09f4f3bcebd9f23a2d8e856a51ba9f5acf8639ac387ba1146f45b6a6458dade6806a86ca867b3b703000aeb85d35d79bc148  crane-0.20.2.tar.gz
+a207750cf567be7c79c1b13ec643bd0a4bb452325ed1d3ab96bcdde1513c6b60654cf622206cf9ec3a57ab917f10cd0c453a68c88cbee2699c25d02465c89c98  crane-0.20.3.tar.gz
 "
