unmaintained/hplip: moved from community
build was already disabled

--- a/unmaintained/hplip/APKBUILD
+++ b/unmaintained/hplip/APKBUILD
@@ -1,12 +1,12 @@
-# Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
+# Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@alpinelinux.org>
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 pkgname=hplip
 pkgver=3.24.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Drivers for HP printers and scanners"
-#arch="all"
+arch="all"
 url="https://hplipopensource.com/"
 license="GPL-2.0-only AND BSD-3-Clause AND MIT"
 makedepends="dbus-dev libjpeg-turbo-dev net-snmp-dev cups-dev libusb-dev sane-dev gawk python3-dev py3-setuptools"
@@ -73,6 +73,7 @@ sane() {
 
 sha512sums="
 6162ec58289433659ed4c3a254b2a50863c01acb87a8c0e1a1f935fed2b1916c5ae211c2d84130f40963368ff53e0c8da1878a1fce4dd08bd517f65bbcf6a2d2  hplip-3.24.4.tar.gz
+0c779817bffb43d7849e758e5a579c3cef0c11a8dd7a8bd33e1f2cbd7cec117f27e82b642d7fd67e46760902180cd04760c50f3a9f35d64045546f35f1e47d74  cups.patch
 7d247b219595a8be4a9d709f14a9034eee1cef467981ffc29d18ee3c00bee125640b1149d7e57e3332242efd978d7cb3f8f25f21d41fb39e38f9520626cfe1ff  fix-memmove.patch
 ac436b54aecc0c2a7fc0eb5ae8e28d483c1efd5bd9385b0a1480fb78b8ccdd28ef85db86a980aec5ca093e9095d5714f93df095bf606e9a9c919f07c64e29697  disable_upgrade.patch
 d8e76cb3757a7659f667e3d54cd0b7572dd8af1f4f87e26694dd3e4b1e0ec5cba7fe2d0ca531e14d568a675aa4a201795a3edb2c8892230e41e0d9408959b726  more-imageprocessor-removes.patch
