main/lua-sqlite: upgrade to 0.9.6

--- a/main/lua-sqlite/APKBUILD
+++ b/main/lua-sqlite/APKBUILD
@@ -2,19 +2,20 @@
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=lua-sqlite
 _rockname=lsqlite3
-pkgver=0.9.5
-_uuid="fsl_9y"
-[ "$pkgver" != "0.9.5" ] && die "Please update uuid!"
+pkgver=0.9.6
+_uuid="v0.9.6"
+[ "$pkgver" != "0.9.6" ] && die "Please update uuid!"
 _luaversions="5.1 5.2 5.3 5.4"
-pkgrel=6
+pkgrel=0
 pkgdesc="Sqlite3 Binding for Lua"
 url="http://lua.sqlite.org/index.cgi/home"
 arch="all"
 license="MIT"
 makedepends="sqlite-dev"
 # the uuid determines the archive version and the filename the target directory
-source="$pkgname-$pkgver.zip::http://lua.sqlite.org/index.cgi/zip/$pkgname-$pkgver.zip?uuid=$_uuid"
-options="!check"
+source="$pkgname-$pkgver.zip::http://lua.sqlite.org/home/zip/${_rockname}_${pkgver//./}.zip?uuid=$_uuid"
+builddir="$srcdir/lsqlite3_096"
+options="!check" # missing lunitx
 
 for _v in $_luaversions; do
 	makedepends="$makedepends lua$_v-dev"
@@ -35,6 +36,7 @@ build() {
 	for lver in $_luaversions; do
 		cd "$builddir-$lver"
 		msg "Building for Lua $lver..."
+		# shellcheck disable=2046
 		${CC:-gcc} $CFLAGS $(pkg-config --cflags sqlite3) \
 			$(pkg-config --cflags lua$lver) -shared -fPIC \
 			-DLSQLITE_VERSION=\"$pkgver\" -o lsqlite3.so lsqlite3.c \
@@ -61,4 +63,6 @@ _package() {
 	echo 'rock_manifest = {}' > "$rockdir"/rock_manifest
 }
 
-sha512sums="3d66a0e7250bada97f753c8204f6ca27142c2c8d3b4a3fba433200f5a90726f4b8ba7317886e11b819ac10bc3c002470e3039509870d0ebd9ff3835d3cff53e5  lua-sqlite-0.9.5.zip"
+sha512sums="
+3b2d77c62976c57a27e8579b7fdac6e680bcfa5f709bfe0f4933401c22a137d345c6c298aa25503e2e9672102528a5ff89f61427ff9c6c50f39d49d33269f2ab  lua-sqlite-0.9.6.zip
+"
