--- a/main/libks/APKBUILD
+++ b/main/libks/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libks
-pkgver=1.8.2
-pkgrel=1
+pkgver=2.0.6
+pkgrel=0
 pkgdesc="Foundational support for signalwire C products"
 url="https://github.com/signalwire/libks"
 arch="all"
@@ -10,7 +10,8 @@ license="MIT"
 makedepends="cmake samurai util-linux-dev openssl-dev>3"
 subpackages="$pkgname-dev $pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/signalwire/libks/archive/refs/tags/v$pkgver.tar.gz
-disable-failing-tests.patch"
+	disable-failing-tests.patch
+	"
 
 build() {
 	cmake -B . -G Ninja \
@@ -28,6 +29,6 @@ package() {
 }
 
 sha512sums="
-5c976803ce649e0690c5b4c14e16e2f08e21cbce67d21fcaaf1f3edbc83c110ad68eb1798b1f5601bd3245992fe471eee1e584d7232c8727957e6804e899b923  libks-1.8.2.tar.gz
-2b9dcde2423531ce9677780c8bd1781450ace473fb9e176fd7449deeef51dc323af9825011f856e3494a7efaf688aff802b7c58105d65e3d21c22bfc71cffbaa  disable-failing-tests.patch
+247fd2dc731f88954a120417fdac915014ba9924de222302801253a384114c2860e27d25928e7204bee679daa11c7b69980e4796890d3bf5ee8fb1a1534f1796  libks-2.0.6.tar.gz
+35c9f582304c49272aa1ccc6793b9eaa9bab84a6a56f181fb0a9db1a120d6c7d86d0910995a3004039f5875a2aec58c26b999cf7932485914bfebdedb1c35c37  disable-failing-tests.patch
 "
