--- a/testing/virtualgl/APKBUILD
+++ b/testing/virtualgl/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: ScrumpyJack <scrumpyjack@st.ilet.to>
-# Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
+# Maintainer: Leon White <badfunkstripe@gmail.com>
 pkgname=virtualgl
-pkgver=3.1.2
+pkgver=3.1.3
 pkgrel=0
 pkgdesc="Toolkit to run remote OpenGL applications with full 3D hardware acceleration"
 url="https://virtualgl.org/"
@@ -50,6 +50,6 @@ package() {
 }
 
 sha512sums="
-5f51691d66645cfca74997b36c442daf4d3fd54ab93b48e501a275a0e8fcc4ecaa71e24665619d40c5561c9598a8d3c224fb3b7ecd3afb56fe0a6ecc350aec5e  VirtualGL-3.1.2.tar.gz
+43e57626efaa86bd5568c61620db5f915db92d6bda2c16f43c6f5d99e9d093bcface8fd0c043af02c58f5d06e9b5f56bbc3cc9fe9b5ec7201902325d49592a92  VirtualGL-3.1.3.tar.gz
 acd348b3005840869baf3f51b0e66bcfbbc93bab2630460a6801a972a13cf428bfe6bee1fac409fe927f0a9d9f6a498ab08c36c4b892b073511503ab81557089  install.patch
 "
