--- a/community/duplicity/APKBUILD
+++ b/community/duplicity/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="Encrypted bandwidth-efficient backup using the rsync algorithm"
 url="https://duplicity.gitlab.io/duplicity-web/"
 arch="all"
 license="GPL-2.0-or-later"
-depends="python3 py3-boto3 gpg gpg-agent ncftp py3-fasteners py3-future"
+depends="python3 py3-boto3 gpg gpg-agent ncftp py3-fasteners"
 makedepends="python3-dev py3-setuptools librsync-dev gettext py3-wheel py3-gpep517"
 checkdepends="py3-pytest py3-pexpect"
 subpackages="$pkgname-pyc $pkgname-doc $pkgname-lang"
