community/fetchmail: remove unused py3-future

--- a/community/fetchmail/APKBUILD
+++ b/community/fetchmail/APKBUILD
@@ -63,7 +63,7 @@ package() {
 }
 
 fetchmailconf() {
-	depends="python3 py3-future python3-tkinter"
+	depends="python3 python3-tkinter"
 	pkgdesc="GUI for generating fetchmail configuration files"
 	install=""
 
