community/wcurl: upgrade to 2025.04.20
https://github.com/curl/wcurl/releases/tag/v2025.04.20

--- a/community/wcurl/APKBUILD
+++ b/community/wcurl/APKBUILD
@@ -1,6 +1,6 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=wcurl
-pkgver=2025.02.24
+pkgver=2025.04.20
 pkgrel=0
 pkgdesc="Simple wrapper around curl to easily download files"
 url="https://curl.se/wcurl"
@@ -18,12 +18,10 @@ check() {
 package() {
 	install -Dvm755 wcurl -t "$pkgdir"/usr/bin/
 	install -Dvm644 wcurl.1 -t "$pkgdir"/usr/share/man/man1/
-	install -Dvm644 README.md -t "$pkgdir"/usr/share/doc/$pkgname/
-	install -Dvm644 AUTHORS -t "$pkgdir"/usr/share/doc/$pkgname/
-	install -Dvm644 CHANGELOG.md -t "$pkgdir"/usr/share/doc/$pkgname/
+	install -Dvm644 README.md AUTHORS CHANGELOG.md -t "$pkgdir"/usr/share/doc/$pkgname/
 	install -Dvm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
-49af605d23a4cdf76ecb4936e3bcddddaca9177dda5e905af202a69feb56675f257b87962b0b01c2ff124ee07f04906dc24b098475cd37b3dacc2b93c172e347  wcurl-2025.02.24.tar.gz
+47a0e1239a4e19a4c9536d69fbd5d71dcf2be7c0233de4918f6dd885b9487246609ee33cd90ea5edc0f3cc9ce033abf90cca9fa449e79a5d731fd5110fc86780  wcurl-2025.04.20.tar.gz
 "
