testing/wayqt: upgrade to 0.3.0
https://gitlab.com/desktop-frameworks/wayqt/-/compare/v0.2.0...v0.3.0

--- a/testing/wayqt/APKBUILD
+++ b/testing/wayqt/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=wayqt
-pkgver=0.2.0
+pkgver=0.3.0
 pkgrel=0
 pkgdesc="Qt-based wrapper for various wayland protocols"
 url="https://gitlab.com/desktop-frameworks/wayqt"
@@ -12,7 +12,7 @@ makedepends="
 	qt5-qtbase-dev
 	qt5-qtwayland-dev
 	wayland-protocols
-	wlroots0.16-dev
+	wlroots-dev
 "
 subpackages="$pkgname-dev"
 source="https://gitlab.com/desktop-frameworks/wayqt/-/archive/v$pkgver/wayqt-v$pkgver.tar.gz"
@@ -31,5 +31,5 @@ package() {
 }
 
 sha512sums="
-885e8da87fa09957a3def467a499d7b6db4202a5102695ee54cd03ecefc74aaba342a1801b7b6b7c30074bd6e089f1148098069182489c88bc0cc025d3708e31  wayqt-v0.2.0.tar.gz
+0273a74d804e126d67b1db3ed57522a89be8246a66c3c2be7aae6cddc00e7bf350eea01a5139dbe9692847e2656ef37679d22c1966ea61740df79f3f30da5aaa  wayqt-v0.3.0.tar.gz
 "
