community/rofi-wayland: upgrade to 1.7.8_p1

--- a/community/rofi-wayland/APKBUILD
+++ b/community/rofi-wayland/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=rofi-wayland
 _projname=rofi
-pkgver=1.7.5_p3
+pkgver=1.7.8_p1
 _pkgver="${pkgver%_p*}+wayland${pkgver#*_p}"
 pkgrel=0
 pkgdesc="Window switcher, run dialog and dmenu replacement - fork with wayland support"
@@ -30,7 +30,7 @@ subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/lbonn/rofi/releases/download/$_pkgver/rofi-$_pkgver.tar.gz
 	rofi-sensible-terminal-use-sh.patch
 	disable-scrollbar-test.patch
-	0001-format-string-test-Fix-for-GLib-2.73.1-e-time-format.patch_libnkutils
+	libnkutils-ignore-failing-asserts.patch
 	"
 builddir="$srcdir/$_projname-$_pkgver"
 
@@ -48,7 +48,7 @@ build() {
 }
 
 check() {
-	meson test --no-rebuild --print-errorlogs -C output
+	LANG=C.UTF-8 meson test --no-rebuild --print-errorlogs -C output
 }
 
 package() {
@@ -59,8 +59,8 @@ package() {
 }
 
 sha512sums="
-f1cc5f59b61c81ada08bbbeaeabb548993d95ad3fc95a15a1ed58f9619a45925a6f3efd624a7d0bf6404f322d8a0587f0f763c7b59dfd568545174855629feb1  rofi-1.7.5+wayland3.tar.gz
+947e7c386201ce7ded2deec856f7f1247c365509fb53db15134d224e7cfb8644d40b61beb774fec8ddc34af49c624f38452bfd392168480b1b7aaaea1dd733bc  rofi-1.7.8+wayland1.tar.gz
 13a93621337b4f317031da9007ed9d426b055190fc946a87eb12333469f9a23e85763e2c1e0492ff2d1d50ceebd429d8125a0b275d1ab0573a4d10cd812bccd9  rofi-sensible-terminal-use-sh.patch
 e00b6ad74ed482ce5a77e7311ad6797481440825006fded5676b5417548bc93b4baa39b80f0f86e645d804dd2e606a894384d7974e10739193561c56af6343f1  disable-scrollbar-test.patch
-dc1eb60339e9edd1a1ed7f6e28ea527a4fe5f7a6f5e9363aec6164a99fa6dbf79d12778d3395f979623e607d3e1431c55398d2b6ac0004b6aa60e4156f7a1b12  0001-format-string-test-Fix-for-GLib-2.73.1-e-time-format.patch_libnkutils
+ba7b406c2ea423c1222c86bae6aa4a097ce4b1ab2e9f057a0b788d384eb3fd0782d78d64a619d36931af747d465764a4a765748baee29b5e872f34181d44a3a5  libnkutils-ignore-failing-asserts.patch
 "
