community/rofi: remove -themes subpackage
Since we have just one rofi package now, it's not needed anymore.

--- a/community/rofi/APKBUILD
+++ b/community/rofi/APKBUILD
@@ -9,7 +9,6 @@ pkgdesc="Window switcher, application launcher and dmenu replacement"
 url="https://github.com/lbonn/rofi"
 arch="all"
 license="MIT"
-depends="$pkgname-themes>=$pkgver"
 makedepends="
 	bison
 	cairo-dev
@@ -35,12 +34,12 @@ checkdepends="
 	check-dev
 	xkeyboard-config-dev
 	"
+replaces="rofi-themes<1.7.8_p1 rofi-wayland<1.7.0-r1"  # for backward compatibility
 subpackages="
 	$pkgname-x11-wayland:_x11_wayland
 	$pkgname-wayland
 	$pkgname-dev
 	$pkgname-doc
-	$pkgname-themes::noarch
 	"
 source="https://github.com/lbonn/rofi/releases/download/$_pkgver/rofi-$_pkgver.tar.gz
 	scrollbar-test.patch
@@ -75,18 +74,11 @@ package() {
 	rm -rf "$pkgdir"/usr/share/rofi/themes/iggy.jpg
 }
 
-themes() {
-	pkgdesc="$pkgdesc (themes)"
-	depends=""
-	replaces="$pkgname<1.7.0-r1 rofi-wayland<1.7.0-r1"  # for backward compatibility
-
-	amove usr/share/rofi/themes
-}
-
 _x11_wayland() {
 	pkgdesc="$pkgdesc (X11 and Wayland)"
 	depends="$pkgname=$pkgver-r$pkgrel !rofi-wayland"
 	install_if="$pkgname"
+	replaces=""
 
 	amove usr/bin/rofi
 }
@@ -94,6 +86,7 @@ _x11_wayland() {
 wayland() {
 	pkgdesc="$pkgdesc (Wayland only)"
 	depends="$pkgname=$pkgver-r$pkgrel !rofi-x11-wayland"
+	replaces=""
 
 	# Cannot amove due to path conflict with -x11-wayland.
 	install -Dm755 "$builddir"/output-wayland/rofi -t "$subpkgdir"/usr/bin/
