main/efi-mkuki: replace cmd:objcopy with binutils
cmd:objcopy is now provided also by testing/build-next-overlay, but
it doesn't support --change-section-vma option.

Resolves #17102

--- a/main/efi-mkuki/APKBUILD
+++ b/main/efi-mkuki/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=efi-mkuki
 pkgver=0.1.1
-pkgrel=0
+pkgrel=1
 pkgdesc="EFI Unified Kernel Image Maker"
 url="https://github.com/jirutka/efi-mkuki"
 arch="noarch"
 license="MIT"
-depends="cmd:objcopy"
+# Needs objcopy from binutils (see #17102).
+depends="binutils"
 source="https://github.com/jirutka/efi-mkuki/archive/v$pkgver/efi-mkuki-$pkgver.tar.gz"
 options="!check"  # no tests provided
 
