--- a/community/rofi/APKBUILD
+++ b/community/rofi/APKBUILD
@@ -42,9 +42,9 @@ subpackages="
 	$pkgname-doc
 	"
 source="https://github.com/lbonn/rofi/releases/download/$_pkgver/rofi-$_pkgver.tar.gz
-	scrollbar-test.patch
 	rofi-sensible-terminal-use-sh.patch
 	libnkutils-ignore-failing-asserts.patch
+	disable-failing-tests.patch
 	"
 builddir="$srcdir/rofi-$_pkgver"
 
@@ -94,7 +94,7 @@ wayland() {
 
 sha512sums="
 947e7c386201ce7ded2deec856f7f1247c365509fb53db15134d224e7cfb8644d40b61beb774fec8ddc34af49c624f38452bfd392168480b1b7aaaea1dd733bc  rofi-1.7.8+wayland1.tar.gz
-dd01b088bdce17f0b2ff0a99a589b3fa50f954d00b6410d64f7fee48e81f9f019cdd0250fdbc6c58f531ac4f9ee59e29c28cf8aa37853e9253943f3db41b5d2c  scrollbar-test.patch
 c25940edf74a02c674da65d16c4fdbcc3bf6700c3b5f5e61d468851d5655490e3683b330dce0a15ea3ac4c3d440c63a69d48f3cea99cf7fd529b9de0fbfc9eae  rofi-sensible-terminal-use-sh.patch
 ba7b406c2ea423c1222c86bae6aa4a097ce4b1ab2e9f057a0b788d384eb3fd0782d78d64a619d36931af747d465764a4a765748baee29b5e872f34181d44a3a5  libnkutils-ignore-failing-asserts.patch
+2642cc00b534e902d7d6234d0067f4a9de4fbbf0f0eca8af12f3afc30f84047d8375824123042e4cc0e05e3854dde8bdc1ff15a223ca76c2af07e4b6ddf73c62  disable-failing-tests.patch
 "
