main/llvm20: create versioned symlinks
Currently non-default llvmXX package creates symlinks like llvmXX-ar and
llvmXX-as. When llvmXX is made the default llvm, these symlinks are not
included, so dependant packages break and need to update their usages.

Always create the versioned packages, so dependant packages can use an
explicit version without disruption when that version switches between
being non-default or default.

See: https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/78292

--- a/main/llvm20/APKBUILD
+++ b/main/llvm20/APKBUILD
@@ -11,7 +11,7 @@ pkgver=20.1.2
 _majorver=${pkgver%%.*}
 _prevmajorver=$((_majorver - 1))
 pkgname=$_pkgname$_majorver
-pkgrel=1
+pkgrel=2
 pkgdesc="Low Level Virtual Machine compiler system, version $_majorver"
 arch="all"
 url="https://llvm.org/"
@@ -197,15 +197,15 @@ package() {
 			llvm-*) newname="llvm$_majorver-${name#llvm-}";;
 			*) newname="$name$_majorver";;
 		esac
-		# If this package provides=llvm (i.e. it's the default/latest
-		# llvm package), omit version infix/suffix.
-		if [ "$_default_llvm" = yes ]; then
-			newname=$name
-		fi
 		case "$name" in
 			FileCheck | obj2yaml | yaml2obj) continue;;
 		esac
-		ln -s ../lib/llvm$_majorver/bin/$name "$pkgdir"/usr/bin/$newname
+		ln -sv ../lib/llvm$_majorver/bin/$name "$pkgdir"/usr/bin/$newname
+		# If this package provides=llvm (i.e. it's the default/latest
+		# llvm package), include symlink without version infix/suffix.
+		if [ "$_default_llvm" = yes ]; then
+			ln -sv ../lib/llvm$_majorver/bin/$name "$pkgdir"/usr/bin/$name
+		fi
 	done
 
 	mkdir -p "$pkgdir"/usr/include "$pkgdir"/usr/lib/cmake
@@ -315,11 +315,11 @@ _test_utils() {
 		usr/bin/lit
 
 	mv "$subpkgdir"/usr/bin/lit "$subpkgdir"/$_prefix/bin/lit
-	ln -s lit "$subpkgdir"/$_prefix/bin/llvm-lit
+	ln -sv lit "$subpkgdir"/$_prefix/bin/llvm-lit
 
 	if [ "$_default_llvm" = yes ]; then
 		amove usr/bin/count usr/bin/not
-		ln -s ../lib/llvm$_majorver/bin/lit "$subpkgdir"/usr/bin/lit
+		ln -sv ../lib/llvm$_majorver/bin/lit "$subpkgdir"/usr/bin/lit
 	else
 		amove usr/bin/count$_majorver usr/bin/not$_majorver
 	fi
