testing/llvm-next: upgrade to 21.0.0_pre20250421

--- a/testing/llvm-next/APKBUILD
+++ b/testing/llvm-next/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=llvm-next
-pkgver=21.0.0_pre20250416
-_gitrev=84082223c819426a8a6486f9740210e956a4cea8
+pkgver=21.0.0_pre20250421
+_gitrev=9e26c797ae9699fba8bd62af99ab3ad6f9b16462
 pkgrel=0
 pkgdesc="Future LLVM Preview"
 url="https://llvm.org/"
@@ -23,7 +23,12 @@ _sover=${pkgver%.*}
 _majorver=${pkgver%%.*}
 _prevmajorver=$((_majorver - 1))
 
-: "${LLVM_SELF_HOST:=false}"
+: "${LLVM_SELF_HOST:=true}"
+
+case "$CARCH" in
+# fails to detect -fuse-ld=lld, try again next upgrade
+riscv64) LLVM_SELF_HOST=false ;;
+esac
 
 if $LLVM_SELF_HOST; then
 	_bootllvm=$_majorver
@@ -140,9 +145,9 @@ case "$pkgver" in
 	;;
 esac
 
-_butime="2025-04-17_00-48"
-_buepoch=1744850881
-_bucommit=62e213a4fbc
+_butime="2025-04-20_00-48"
+_buepoch=1745110081
+_bucommit=5cfabe75dba
 _buver=2.44.50
 _bufile="binutils-with-gold-$_buver-$_bucommit"
 _budir="$srcdir/$_bufile"
@@ -346,8 +351,10 @@ build() {
 		-DCMAKE_C_COMPILER="clang" \
 		-DCMAKE_CXX_COMPILER="clang++" \
 		\
+		-DCOMPILER_RT_BUILD_CTX_PROFILE=OFF \
 		-DCOMPILER_RT_BUILD_GWP_ASAN=OFF \
 		-DCOMPILER_RT_BUILD_LIBFUZZER=OFF \
+		-DCOMPILER_RT_BUILD_MEMPROF=OFF \
 		-DCOMPILER_RT_BUILD_ORC=OFF \
 		-DCOMPILER_RT_BUILD_PROFILE=OFF \
 		-DCOMPILER_RT_BUILD_SANITIZERS=OFF \
@@ -415,11 +422,13 @@ check() {
 	done
 
 	# https://github.com/llvm/llvm-project/issues/59429
-	export LIT_XFAIL="ExecutionEngine/MCJIT/eh-lg-pic.ll;\
+	if [ "$CARCH" = "loongarch64" ] || ! $LLVM_SELF_HOST; then
+		LIT_XFAIL="ExecutionEngine/MCJIT/eh-lg-pic.ll;\
 ExecutionEngine/MCJIT/eh.ll;\
 ExecutionEngine/MCJIT/multi-module-eh-a.ll;\
 ExecutionEngine/MCJIT/remote/eh.ll;\
 "
+	fi
 
 	case "$CARCH" in
 	loongarch64|ppc64le|riscv64)
@@ -436,6 +445,7 @@ Bindings/OCaml/target.ml;\
 		;;
 	esac
 
+	export LIT_XFAIL
 	ninja -C build check-llvm
 }
 
@@ -871,6 +881,8 @@ openmpdev() {
 		usr/lib/libomp*.so \
 		usr/share/gdb/python/ompd \
 		$_prefix/lib/libomptarget*
+
+	amove $_prefix/lib/*/libomp*.a || :
 }
 
 polly() {
@@ -987,6 +999,7 @@ _build_next_overlay() {
 
 _build_next_bfd() {
 	pkgdesc="$pkgdesc (toolchain meta-package - complementary binutils $_buver linker)"
+	url="https://sourceware.org/binutils/"
 	license="GPL-2.0-or-later AND LGPL-2.1-or-later AND BSD-3-Clause"
 	install_if="build-next=$pkgver-r$pkgrel"
 	replaces="binutils"
@@ -997,6 +1010,7 @@ _build_next_bfd() {
 
 _build_next_gas() {
 	pkgdesc="$pkgdesc (toolchain meta-package - complementary binutils $_buver assembler)"
+	url="https://sourceware.org/binutils/"
 	license="GPL-2.0-or-later AND LGPL-2.1-or-later AND BSD-3-Clause"
 	install_if="build-next=$pkgver-r$pkgrel"
 	replaces="binutils"
@@ -1222,7 +1236,7 @@ pyc() {
 }
 
 sha512sums="
-bcd431f150c665136533bd3aac113b20af66bbb44abb1ad25b5036bd47436ba1a2acc242d327678af8cf0108d3e6f303086526aae34c389419816bcb8dbf8c4a  llvm-project-84082223c819426a8a6486f9740210e956a4cea8.tar.gz
+9520e7338282e9c78b5e25d9dae5401d216ec9841c987ac2def0a9238dc069b8d21173acd84eac8a8c3989ccf7f745b6878e203672916bf049b2871b2637259e  llvm-project-9e26c797ae9699fba8bd62af99ab3ad6f9b16462.tar.gz
 bd104899dc5b994655f15b426fd4d5820def9c268dd8f88ab82f98ae1f256b4d17344cc81c8e3e01c908e5ce347ac9d5494c277de5c29508c8e85230138cae35  0001-Disable-dynamic-lib-tests-for-musl-s-dlclose-is-noop.patch
 c51dcd90def5dfcc70e14d50143c53d215a2a13d34051c26a6cad50c8b95be1e97c21295c7b1b3b9671da6add350d1cd26c5e049fd537226e089ab5d16c83907  0002-Fix-memory-mf_exec-on-aarch64.patch
 7384dacff265d9fd3a36433e3289455023c78fec442b3e847ead2c5fc0acbc3f3f81db742d1a298c6d752709a856a2efff8676cb7056983180af61a7aa3b08ec  0003-LLVM-install-prefix.patch
@@ -1238,11 +1252,11 @@ cfaec3e531dfdb36ec5a5d617e07d7f83658e72b499c47cfdefa0cffae9c77f1755e882395fe7ef5
 95563724314ee8b78fd3db790eee3b4ff8436430952876ed627ab7197e3dd17c698ac5757449d1935607f486852005e117d72208b840b5f104545c962b475853  0013-Standalone-libatomic.patch
 c4c9775cfaf5b9c84a5448354dd6d302db21e9a847c3cca87abc1aabc95732b5f660c44514e9a1b4f95c7145cb6cceb564babd44480797bffa5a501dccdaee3e  0014-Fix-msan-with-musl.patch
 347b210c8313143d40c2e312a4c44ae8e1ea1715f7fd150cfa6a8831d3b6ac7b9ec233402ab8ea9eff4baff806b66c910bdc129bc73d273a150451af9a084388  0015-PPC-sanitizer-fixes.patch
-d8358e7604db221725fba736cb3e5fce853c144ac79e983c0e3bf428d66a0a7687c6f14ec82a92d1140e98d547d2a1618e72ba11a01b89230d5f084bc76b5169  0016-Basic-lsan-fixes-on-various-archs.patch
+c1dd3309533314881201d35d42b85437262fdbe88675cd7e23ef3830b1b026b310c5a5d86aa4ada0b2e1db3c0c6853e1b1202292117c99b1d15f640ec55a52e8  0016-Basic-lsan-fixes-on-various-archs.patch
 524e4177ddcac6de054c2be2baafaa7326aa786cfcd00cca5f6ec2034b6ee3ed329c81bc3732808e5e0fc65bf146f8d35ba5dc1b276d4fcab96bd9e4aac8b47f  0017-32-bit-musl-sanitizer-fixes.patch
 6c6bcb65ea4448f8991ce98e8e684c200b78923c9f0ffa54739568d0f88160be5b0a01276bc8fd183dd739ed6ba83042687b54fc59339b922683525ff8c609a1  0018-Use-gas-as-clang-gnutools-assembler.patch
 73d6be123ab157816e8511358cf436efcdd5bb7d330c79b6a04af622d0a79934400b35a5abf359073ed510c1b77f7b3fdf5ea69c1fa7ae348694c95308e42900  0019-LLD-add-build-shared-libs-option.patch
-0d6a44d936935100f1ee5f89029fb5c4faadec327bc13473c937d0ec1e12bdba6f81ff10a1901bab4df06bb9a7eebed7c15f17763c2d8c9b30203c94ca793e93  binutils-with-gold-2.44.50-62e213a4fbc.tar.xz
+f245fcaf3f3bc32d8944115b93e82a8fce75829543fd9556e71fcfafcd5fe17dc5722b3cb3431e28a6b4452840f683d4151c546c18ac3142b3e9319df42cea5a  binutils-with-gold-2.44.50-5cfabe75dba.tar.xz
 35ab13a072c2d39259d1bd277729e8ce53b6df46c2c9e8c7f3662164ef473780dc4c1f1909ba9f9ed70a2492d9d7ee9d7f9ab6d21e0726abdb38364d67327cb5  0801-Revert-PR25882-.gnu.attributes-are-not-checked-for-s.patch
 1ad8f0ed596a4faadc12d05809525aa1c52b4f76a6e266e88b7eb8ce10ab9337cc14536fd5876adaebbb9e6a03a0d837cc6e99680f8408125212b2228f4266e7  0802-Binutils-ld-fix-static-linking.patch
 "
